--- a/GitFinda/Screens/SearchVC/FolllowerVC.xib
+++ b/GitFinda/Screens/SearchVC/FolllowerVC.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FolllowerVC" customModule="GitFinda" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="3a8-dq-xWV" id="Luu-n8-rVU"/>
+                <outlet property="tableView" destination="QQi-ba-Dyq" id="umd-gx-0ra"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="3a8-dq-xWV">
-                    <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                    <rect key="frame" x="0.0" y="118" width="393" height="666"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="C8C-V1-lcQ">
                         <size key="itemSize" width="128" height="128"/>
@@ -29,16 +30,23 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="QQi-ba-Dyq">
+                    <rect key="frame" x="0.0" y="118" width="393" height="666"/>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="M4a-4D-m7p"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="3a8-dq-xWV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="DDU-Qd-j9g"/>
-                <constraint firstItem="3a8-dq-xWV" firstAttribute="trailing" secondItem="M4a-4D-m7p" secondAttribute="trailing" id="U6E-fY-7Y8"/>
-                <constraint firstAttribute="bottom" secondItem="3a8-dq-xWV" secondAttribute="bottom" id="mB1-Xd-KBo"/>
-                <constraint firstItem="3a8-dq-xWV" firstAttribute="leading" secondItem="M4a-4D-m7p" secondAttribute="leading" id="taC-BH-jiZ"/>
+                <constraint firstItem="M4a-4D-m7p" firstAttribute="bottom" secondItem="QQi-ba-Dyq" secondAttribute="bottom" id="0jx-oB-YFg"/>
+                <constraint firstItem="M4a-4D-m7p" firstAttribute="bottom" secondItem="3a8-dq-xWV" secondAttribute="bottom" id="2Ok-Kp-Fey"/>
+                <constraint firstItem="M4a-4D-m7p" firstAttribute="trailing" secondItem="QQi-ba-Dyq" secondAttribute="trailing" id="7QH-y1-x8h"/>
+                <constraint firstItem="QQi-ba-Dyq" firstAttribute="leading" secondItem="M4a-4D-m7p" secondAttribute="leading" id="NZf-Nc-mRU"/>
+                <constraint firstItem="3a8-dq-xWV" firstAttribute="leading" secondItem="M4a-4D-m7p" secondAttribute="leading" id="bGm-Gn-ibk"/>
+                <constraint firstItem="3a8-dq-xWV" firstAttribute="top" secondItem="M4a-4D-m7p" secondAttribute="top" id="dbN-ye-4AS"/>
+                <constraint firstItem="QQi-ba-Dyq" firstAttribute="top" secondItem="M4a-4D-m7p" secondAttribute="top" id="feL-rZ-Lvc"/>
+                <constraint firstItem="3a8-dq-xWV" firstAttribute="trailing" secondItem="M4a-4D-m7p" secondAttribute="trailing" id="t8P-Ck-jaV"/>
             </constraints>
-            <point key="canvasLocation" x="271" y="247"/>
+            <point key="canvasLocation" x="270.99236641221376" y="246.47887323943664"/>
         </view>
     </objects>
     <resources>
